<resources>
    <string name="app_name">navigationProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo1">Image 1</string>
    <string name="todo2">Image 2</string>
    <string name="todo3">Image 3</string>
    <string name="btn1">Display Image 1</string>
    <string name="btn2">Display Image 2</string>
    <string name="btn3">Display Image 3</string>
    <string name="title_image">TextView</string>
    <string name="todo4">TODO</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
</resources>